[package]
name = "dahe"
version = "0.0.0"
authors = ["lightclient@protonmail.com <lightclient@protonmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
directories = "3.0"
eth-keystore = "0.2"
ethers = "0.2"
hex = "0.4"
rand = "0.7"
rpassword = "5.0"
serde = "1.0"
structopt = "0.3"
toml = "0.4"
